# wallet_service

./: .gitignore  README.md  asgi.py  manage.py  pyproject.toml  wsgi.py
router/: urls.py
settings/: settings_base.py
wallet_app/: choices.py  constants.py
wallet_app/api/v1/: default.py
wallet_app/management/commands/: init_currencies.py
wallet_app/migrations/: 0001_initial.py  0002_alter_currency_sign.py  0003_alter_rate_rate_value_alter_transaction_amount.py
wallet_app/models/: __init__.py  currency.py  merchant.py  rate.py  transaction.py  wallet.py
