[tool.poetry]
name = "wallet-service"
version = "0.1.0"
description = ""
authors = ["Yuriy Shevchenko <shevchenko.y.s@gmail.com>"]
readme = "README.md"
packages = [{include = "wallet_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
uvicorn = "^0.20.0"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^1.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
